<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/bg_color">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:text="Please enter all details for maximum accuracy"
        />

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/name"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColorHint="#adadad"
            android:textColor="@color/white"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ."/>

        <EditText
            android:id="@+id/surname_edit_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/surname"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColorHint="#adadad"
            android:textColor="@color/white"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ."/>
    </LinearLayout>

    <EditText
        android:id="@+id/phone_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/phone_number"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColorHint="#adadad"
        android:textColor="@color/white"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ."/>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/height_edit_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/height"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColorHint="#adadad"
            android:textColor="@color/white"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ."/>

        <EditText
            android:id="@+id/weight_edit_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/weight"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColorHint="#adadad"
            android:textColor="@color/white"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ."/>
    </LinearLayout>


    <EditText
        android:id="@+id/smoke_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/smoke"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColorHint="#adadad"
        android:textColor="@color/white"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ."/>

    <EditText
        android:id="@+id/drink_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/drink"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColorHint="#adadad"
        android:textColor="@color/white"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ."/>

    <EditText
        android:id="@+id/childNum_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/childNum"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColorHint="#adadad"
        android:textColor="@color/white"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ."/>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/whenBirth_edit_text"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="16dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/whenBirth"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColorHint="#adadad"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/examination_edit_text"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_border"
            android:textSize="16dp"
            android:hint="@string/examination"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColorHint="#adadad"
            android:textColor="@color/white"/>
    </LinearLayout>
    <Button
        android:id="@+id/save_button"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Button.White"
        android:text="@string/save" />

</LinearLayout>